remove sugar/infsites.hpp

--- a/fwdpp/sugar/Makefile.am
+++ b/fwdpp/sugar/Makefile.am
@@ -2,4 +2,4 @@ pkgincludedir=$(prefix)/include/fwdpp/sugar
 
 SUBDIRS=gsl poptypes sampling
 
-pkginclude_HEADERS=sugar.hpp slocuspop.hpp mlocuspop.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
+pkginclude_HEADERS=sugar.hpp slocuspop.hpp mlocuspop.hpp GSLrng_t.hpp popgenmut.hpp sampling.hpp generalmut.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
