add custom diploid example

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,7 +4,8 @@ noinst_PROGRAMS=	diploid_ind \
 	K_linked_regions_extensions \
 	K_linked_regions_generalized_rec \
 	juvenile_migration \
-	custom_mutation
+	custom_mutation \
+	custom_diploid
 
 
 diploid_ind_SOURCES=diploid_ind.cc common_ind.hpp
@@ -14,6 +15,7 @@ K_linked_regions_extensions_SOURCES=K_linked_regions_extensions.cc common_ind.hp
 K_linked_regions_generalized_rec_SOURCES=K_linked_regions_generalized_rec.cc common_ind.hpp
 juvenile_migration_SOURCES=juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES=custom_mutation.cc common_ind.hpp
+custom_diploid_SOURCES=custom_diploid.cc common_ind.hpp
 
 AM_CPPFLAGS=-Wall -W -I.
 
