--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -90,7 +90,8 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	K_linked_regions_multilocus$(EXEEXT) \
 	K_linked_regions_extensions$(EXEEXT) \
 	K_linked_regions_generalized_rec$(EXEEXT) \
-	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT)
+	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT) \
+	custom_diploid$(EXEEXT)
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_1 = -DHAVE_LIBSEQUENCE
 @DEBUG_FALSE@am__append_2 = -DNDEBUG
 subdir = examples
@@ -123,6 +124,10 @@ K_linked_regions_multilocus_OBJECTS =  \
 	$(am_K_linked_regions_multilocus_OBJECTS)
 K_linked_regions_multilocus_LDADD = $(LDADD)
 K_linked_regions_multilocus_DEPENDENCIES =
+am_custom_diploid_OBJECTS = custom_diploid.$(OBJEXT)
+custom_diploid_OBJECTS = $(am_custom_diploid_OBJECTS)
+custom_diploid_LDADD = $(LDADD)
+custom_diploid_DEPENDENCIES =
 am_custom_mutation_OBJECTS = custom_mutation.$(OBJEXT)
 custom_mutation_OBJECTS = $(am_custom_mutation_OBJECTS)
 custom_mutation_LDADD = $(LDADD)
@@ -183,13 +188,15 @@ am__v_CCLD_1 =
 SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(K_linked_regions_multilocus_SOURCES) \
-	$(custom_mutation_SOURCES) $(diploid_fixed_sh_ind_SOURCES) \
-	$(diploid_ind_SOURCES) $(juvenile_migration_SOURCES)
+	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
+	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
+	$(juvenile_migration_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(K_linked_regions_multilocus_SOURCES) \
-	$(custom_mutation_SOURCES) $(diploid_fixed_sh_ind_SOURCES) \
-	$(diploid_ind_SOURCES) $(juvenile_migration_SOURCES)
+	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
+	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
+	$(juvenile_migration_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -320,6 +327,7 @@ K_linked_regions_extensions_SOURCES = K_linked_regions_extensions.cc common_ind.
 K_linked_regions_generalized_rec_SOURCES = K_linked_regions_generalized_rec.cc common_ind.hpp
 juvenile_migration_SOURCES = juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
+custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
 AM_CPPFLAGS = -Wall -W -I. $(am__append_2)
 AM_CXXFLAGS = $(am__append_1)
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@AM_LIBS = -lsequence
@@ -373,6 +381,10 @@ K_linked_regions_multilocus$(EXEEXT): $(K_linked_regions_multilocus_OBJECTS) $(K
 	@rm -f K_linked_regions_multilocus$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(K_linked_regions_multilocus_OBJECTS) $(K_linked_regions_multilocus_LDADD) $(LIBS)
 
+custom_diploid$(EXEEXT): $(custom_diploid_OBJECTS) $(custom_diploid_DEPENDENCIES) $(EXTRA_custom_diploid_DEPENDENCIES) 
+	@rm -f custom_diploid$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(custom_diploid_OBJECTS) $(custom_diploid_LDADD) $(LIBS)
+
 custom_mutation$(EXEEXT): $(custom_mutation_OBJECTS) $(custom_mutation_DEPENDENCIES) $(EXTRA_custom_mutation_DEPENDENCIES) 
 	@rm -f custom_mutation$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(custom_mutation_OBJECTS) $(custom_mutation_LDADD) $(LIBS)
@@ -398,6 +410,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_extensions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_generalized_rec.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/K_linked_regions_multilocus.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/custom_diploid.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/custom_mutation.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_fixed_sh_ind.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/diploid_ind.Po@am__quote@
