move data_matrix files from sugar to main library

--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -10,5 +10,6 @@ pkginclude_HEADERS=mutation_internal.hpp \
 	recycling.hpp \
 	sample_diploid_helpers.hpp \
 	type_traits.hpp \
+	data_matrix_details.hpp \
 	void_t.hpp
 
