update build system to track new header locations

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -326,6 +326,7 @@ pkginclude_HEADERS = debug.hpp \
 	sugar.hpp \
 	version.hpp \
 	mutate_recombine.hpp \
+	data_matrix.hpp \
 	recbinder.hpp
 
 all: all-recursive
