--- a/fwdpp/sugar/Makefile.in
+++ b/fwdpp/sugar/Makefile.in
@@ -308,7 +308,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = gsl poptypes sampling
-pkginclude_HEADERS = sugar.hpp slocuspop.hpp mlocuspop.hpp GSLrng_t.hpp popgenmut.hpp sampling.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
+pkginclude_HEADERS = sugar.hpp slocuspop.hpp mlocuspop.hpp GSLrng_t.hpp popgenmut.hpp sampling.hpp add_mutation.hpp change_neutral.hpp
 all: all-recursive
 
 .SUFFIXES:
