--- a/fwdpp/internal/Makefile.in
+++ b/fwdpp/internal/Makefile.in
@@ -275,6 +275,7 @@ pkginclude_HEADERS = mutation_internal.hpp \
 	recycling.hpp \
 	sample_diploid_helpers.hpp \
 	type_traits.hpp \
+	data_matrix_details.hpp \
 	void_t.hpp
 
 all: all-am
