--- a/fwdpp/internal/Makefile.am
+++ b/fwdpp/internal/Makefile.am
@@ -11,5 +11,6 @@ pkginclude_HEADERS=mutation_internal.hpp \
 	sample_diploid_helpers.hpp \
 	type_traits.hpp \
 	data_matrix_details.hpp \
+	sampling_functions_details.hpp \
 	void_t.hpp
 
