Add new example program.  wfts = Wright-Fisher, tree sequence

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,7 +5,8 @@ noinst_PROGRAMS=	diploid_ind \
 	K_linked_regions_generalized_rec \
 	juvenile_migration \
 	custom_mutation \
-	custom_diploid
+	custom_diploid \
+	wfts
 
 
 diploid_ind_SOURCES=diploid_ind.cc common_ind.hpp
@@ -16,6 +17,9 @@ K_linked_regions_generalized_rec_SOURCES=K_linked_regions_generalized_rec.cc com
 juvenile_migration_SOURCES=juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES=custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES=custom_diploid.cc common_ind.hpp
+
+# examples based on tree sequences
+wfts_SOURCES=custom_diploid.cc common_ind.hpp
 
 AM_CPPFLAGS=-Wall -W -I.
 
