--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -91,7 +91,7 @@ noinst_PROGRAMS = diploid_ind$(EXEEXT) diploid_fixed_sh_ind$(EXEEXT) \
 	K_linked_regions_extensions$(EXEEXT) \
 	K_linked_regions_generalized_rec$(EXEEXT) \
 	juvenile_migration$(EXEEXT) custom_mutation$(EXEEXT) \
-	custom_diploid$(EXEEXT)
+	custom_diploid$(EXEEXT) wfts$(EXEEXT)
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@am__append_1 = -DHAVE_LIBSEQUENCE
 @DEBUG_FALSE@am__append_2 = -DNDEBUG
 subdir = examples
@@ -144,6 +144,10 @@ am_juvenile_migration_OBJECTS = juvenile_migration.$(OBJEXT)
 juvenile_migration_OBJECTS = $(am_juvenile_migration_OBJECTS)
 juvenile_migration_LDADD = $(LDADD)
 juvenile_migration_DEPENDENCIES =
+am_wfts_OBJECTS = custom_diploid.$(OBJEXT)
+wfts_OBJECTS = $(am_wfts_OBJECTS)
+wfts_LDADD = $(LDADD)
+wfts_DEPENDENCIES =
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -190,13 +194,13 @@ SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_multilocus_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
-	$(juvenile_migration_SOURCES)
+	$(juvenile_migration_SOURCES) $(wfts_SOURCES)
 DIST_SOURCES = $(K_linked_regions_extensions_SOURCES) \
 	$(K_linked_regions_generalized_rec_SOURCES) \
 	$(K_linked_regions_multilocus_SOURCES) \
 	$(custom_diploid_SOURCES) $(custom_mutation_SOURCES) \
 	$(diploid_fixed_sh_ind_SOURCES) $(diploid_ind_SOURCES) \
-	$(juvenile_migration_SOURCES)
+	$(juvenile_migration_SOURCES) $(wfts_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -329,6 +333,9 @@ K_linked_regions_generalized_rec_SOURCES = K_linked_regions_generalized_rec.cc c
 juvenile_migration_SOURCES = juvenile_migration.cc common_ind.hpp
 custom_mutation_SOURCES = custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES = custom_diploid.cc common_ind.hpp
+
+# examples based on tree sequences
+wfts_SOURCES = custom_diploid.cc common_ind.hpp
 AM_CPPFLAGS = -Wall -W -I. $(am__append_2)
 AM_CXXFLAGS = $(am__append_1)
 @HAVE_LIBSEQ_RUNTIME_TRUE@@HAVE_SIMDATA_HPP_TRUE@AM_LIBS = -lsequence
@@ -401,6 +408,10 @@ diploid_ind$(EXEEXT): $(diploid_ind_OBJECTS) $(diploid_ind_DEPENDENCIES) $(EXTRA
 juvenile_migration$(EXEEXT): $(juvenile_migration_OBJECTS) $(juvenile_migration_DEPENDENCIES) $(EXTRA_juvenile_migration_DEPENDENCIES) 
 	@rm -f juvenile_migration$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(juvenile_migration_OBJECTS) $(juvenile_migration_LDADD) $(LIBS)
+
+wfts$(EXEEXT): $(wfts_OBJECTS) $(wfts_DEPENDENCIES) $(EXTRA_wfts_DEPENDENCIES) 
+	@rm -f wfts$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(wfts_OBJECTS) $(wfts_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
