--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,8 +5,7 @@ noinst_PROGRAMS=	diploid_ind \
 	K_linked_regions_generalized_rec \
 	juvenile_migration \
 	custom_mutation \
-	custom_diploid \
-	wfts
+	custom_diploid
 
 
 diploid_ind_SOURCES=diploid_ind.cc common_ind.hpp
@@ -19,8 +18,13 @@ custom_mutation_SOURCES=custom_mutation.cc common_ind.hpp
 custom_diploid_SOURCES=custom_diploid.cc common_ind.hpp
 
 # examples based on tree sequences
+if BPO_PRESENT
+if BPO_PRESENT
+noinst_PROGRAMS+=wfts
 wfts_SOURCES=wfts.cc
 wfts_LDADD=-lboost_program_options
+endif
+endif
 
 AM_CPPFLAGS=-Wall -W -I.
 
