--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -15,6 +15,7 @@ pkginclude_HEADERS= definitions.hpp \
 			count_mutations.hpp \
 			msprime_algo.hpp \
 			mutation_record.hpp \
+			recycling.hpp \
 			variant_filler.hpp 
 
 
