--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -280,6 +280,7 @@ pkginclude_HEADERS = definitions.hpp \
 			count_mutations.hpp \
 			msprime_algo.hpp \
 			mutation_record.hpp \
+			recycling.hpp \
 			variant_filler.hpp 
 
 all: all-am
