remove fwdpp/ts/variant_filler.hpp

--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -281,8 +281,7 @@ pkginclude_HEADERS = definitions.hpp \
 			count_mutations.hpp \
 			msprime_algo.hpp \
 			mutation_record.hpp \
-			recycling.hpp \
-			variant_filler.hpp 
+			recycling.hpp
 
 all: all-am
 
