--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -282,6 +282,7 @@ pkginclude_HEADERS = definitions.hpp \
 			count_mutations.hpp \
 			msprime_algo.hpp \
 			mutation_record.hpp \
+			remove_fixations_from_gametes.hpp \
 			recycling.hpp
 
 all: all-am
