--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -283,7 +283,8 @@ pkginclude_HEADERS = definitions.hpp \
 			msprime_algo.hpp \
 			mutation_record.hpp \
 			remove_fixations_from_gametes.hpp \
-			recycling.hpp
+			recycling.hpp \
+			serialiation.hpp
 
 all: all-am
 
