--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -284,7 +284,7 @@ pkginclude_HEADERS = definitions.hpp \
 			mutation_record.hpp \
 			remove_fixations_from_gametes.hpp \
 			recycling.hpp \
-			serialiation.hpp
+			serialization.hpp
 
 all: all-am
 
