Add new header to Makefiles

--- a/fwdpp/ts/Makefile.am
+++ b/fwdpp/ts/Makefile.am
@@ -18,6 +18,7 @@ pkginclude_HEADERS= definitions.hpp \
 			mutation_record.hpp \
 			remove_fixations_from_gametes.hpp \
 			recycling.hpp \
+			serialization_version.hpp \
 			serialization.hpp
 
 
