--- a/fwdpp/ts/Makefile.in
+++ b/fwdpp/ts/Makefile.in
@@ -283,6 +283,7 @@ pkginclude_HEADERS = definitions.hpp \
 			mutation_record.hpp \
 			remove_fixations_from_gametes.hpp \
 			recycling.hpp \
+			serialization_version.hpp \
 			serialization.hpp
 
 all: all-am
