--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_LANG(C++)
 AC_CONFIG_FILES([Makefile fwdpp/version.hpp fwdpp/Makefile fwdpp/io/Makefile fwdpp/algorithm/Makefile fwdpp/io/detail/Makefile
                  fwdpp/internal/Makefile fwdpp/tags/Makefile fwdpp/sugar/Makefile fwdpp/sugar/poptypes/Makefile
                  fwdpp/sugar/gsl/Makefile fwdpp/extensions/Makefile fwdpp/meta/Makefile
-                 fwdpp/ts/Makefile examples/Makefile testsuite/Makefile src/Makefile doc/fwdpp.doxygen]) 
+                 fwdpp/ts/Makefile fwdpp/ts/detail/Makefile examples/Makefile testsuite/Makefile src/Makefile doc/fwdpp.doxygen]) 
 
 AC_ARG_ENABLE([debug],AS_HELP_STRING([--enable-debug],[Compile examples with run-time assert macro enabled.]))
 AM_CONDITIONAL([DEBUG],test x$enable_debug = xyes)
