examples/spatialts.cc added

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -23,6 +23,10 @@ if BPO_PRESENT
 noinst_PROGRAMS+=wfts
 wfts_SOURCES=wfts.cc
 wfts_LDADD=-lboost_program_options
+
+noinst_PROGRAMS+=spatialts
+spatialts_SOURCES=spatialts.cc
+spatialts_LDADD=-lboost_program_options
 endif
 endif
 
