Add fwdpp::named_type and namespace fwdpp::strong_types.

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -19,7 +19,8 @@ pkginclude_HEADERS=debug.hpp \
 	version.hpp \
 	mutate_recombine.hpp \
 	data_matrix.hpp \
-	recbinder.hpp
+	recbinder.hpp \
+	named_type.hpp
 
 
 
