--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -326,7 +326,8 @@ pkginclude_HEADERS = debug.hpp \
 	version.hpp \
 	mutate_recombine.hpp \
 	data_matrix.hpp \
-	recbinder.hpp
+	recbinder.hpp \
+	named_type.hpp
 
 all: all-recursive
 
