Add fwdpp::genetic_parameters and fwdpp::make_genetic_parameters.

--- a/fwdpp/Makefile.am
+++ b/fwdpp/Makefile.am
@@ -23,7 +23,8 @@ pkginclude_HEADERS=debug.hpp \
 	named_type.hpp \
 	slocuspop.hpp \
 	mlocuspop.hpp \
-	popgenmut.hpp
+	popgenmut.hpp \
+	simparams.hpp
 
 
 
