Move wrapped_range into its own header.

--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -330,7 +330,8 @@ pkginclude_HEADERS = debug.hpp \
 	slocuspop.hpp \
 	mlocuspop.hpp \
 	popgenmut.hpp \
-	simparams.hpp
+	simparams.hpp \
+	wrapped_range.hpp
 
 all: all-recursive
 
