add unit test for fwdpp::wrapped_range

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -9,7 +9,8 @@ TESTS=$(noinst_PROGRAMS)
 #Unit test targets:
 unit_fwdpp_unit_tests_SOURCES=unit/fwdpp_unit_tests.cc unit/mutateTest.cc unit/gameteTest.cc unit/utilTest.cc unit/type_traitsTest.cc unit/siteDepFitnessTest.cc unit/serializationTest.cc unit/mlocusCrossoverTest.cc unit/gamete_cleanerTest.cc unit/test_general_rec_variation.cc \
 	unit/test_mutate_recombine.cc unit/test_sampling.cc \
-	unit/test_simparams.cc
+	unit/test_simparams.cc \
+	unit/test_wrapped_range.cc
 
 unit_extensions_unit_tests_SOURCES=unit/extensions_unit_test.cc unit/extensions_regionsTest.cc unit/extensions_callbacksTest.cc
 unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
