--- a/fwdpp/Makefile.in
+++ b/fwdpp/Makefile.in
@@ -307,7 +307,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = internal tags sugar extensions io meta algorithm ts poptypes
+SUBDIRS = internal tags sugar gsl extensions io meta algorithm ts poptypes
 pkginclude_HEADERS = debug.hpp \
 	diploid.hh \
 	fitness_models.hpp \
@@ -322,7 +322,6 @@ pkginclude_HEADERS = debug.hpp \
 	sampling_functions.hpp \
 	type_traits.hpp \
 	util.hpp \
-	sugar.hpp \
 	version.hpp \
 	mutate_recombine.hpp \
 	data_matrix.hpp \
