--- a/fwdpp/sugar/Makefile.in
+++ b/fwdpp/sugar/Makefile.in
@@ -307,8 +307,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = gsl 
-pkginclude_HEADERS = sugar.hpp add_mutation.hpp change_neutral.hpp
+SUBDIRS = 
+pkginclude_HEADERS = add_mutation.hpp change_neutral.hpp
 all: all-recursive
 
 .SUFFIXES:
