--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2,7 +2,8 @@ if BUNIT_TEST_PRESENT
 
 noinst_PROGRAMS=unit/fwdpp_unit_tests unit/extensions_unit_tests unit/sugar_unit_tests \
 			   integration/sugar_integration_tests \
-			   integration/extensions_integration_tests
+			   integration/extensions_integration_tests \
+			   tree_sequences/tree_sequence_tests
 
 TESTS=$(noinst_PROGRAMS)
 
@@ -24,6 +25,8 @@ unit_sugar_unit_tests_SOURCES=unit/sugar_unit_tests.cc \
 integration_sugar_integration_tests_SOURCES=integration/sugar_integration_tests.cc integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc
 
 integration_extensions_integration_tests_SOURCES=integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc
+
+tree_sequences_tree_sequence_tests_SOURCES=tree_sequences/tree_sequence_tests.cc
 
 AM_CXXFLAGS=-W -Wall
 
