--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -91,7 +91,8 @@ POST_UNINSTALL = :
 @BUNIT_TEST_PRESENT_TRUE@	unit/extensions_unit_tests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	unit/sugar_unit_tests$(EXEEXT) \
 @BUNIT_TEST_PRESENT_TRUE@	integration/sugar_integration_tests$(EXEEXT) \
-@BUNIT_TEST_PRESENT_TRUE@	integration/extensions_integration_tests$(EXEEXT)
+@BUNIT_TEST_PRESENT_TRUE@	integration/extensions_integration_tests$(EXEEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/tree_sequence_tests$(EXEEXT)
 subdir = testsuite
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ax_cxx_compile_stdxx_11.m4 \
@@ -125,6 +126,12 @@ am__integration_sugar_integration_tests_SOURCES_DIST =  \
 integration_sugar_integration_tests_OBJECTS =  \
 	$(am_integration_sugar_integration_tests_OBJECTS)
 integration_sugar_integration_tests_LDADD = $(LDADD)
+am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
+	tree_sequences/tree_sequence_tests.cc
+@BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT)
+tree_sequences_tree_sequence_tests_OBJECTS =  \
+	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
+tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
 am__unit_extensions_unit_tests_SOURCES_DIST =  \
 	unit/extensions_unit_test.cc unit/extensions_regionsTest.cc \
 	unit/extensions_callbacksTest.cc
@@ -194,6 +201,7 @@ am__depfiles_remade =  \
 	integration/$(DEPDIR)/sugar_multilocusTest.Po \
 	integration/$(DEPDIR)/sugar_singlepopTest.Po \
 	integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po \
+	tree_sequences/$(DEPDIR)/tree_sequence_tests.Po \
 	unit/$(DEPDIR)/extensions_callbacksTest.Po \
 	unit/$(DEPDIR)/extensions_regionsTest.Po \
 	unit/$(DEPDIR)/extensions_unit_test.Po \
@@ -232,12 +240,14 @@ am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
 SOURCES = $(integration_extensions_integration_tests_SOURCES) \
 	$(integration_sugar_integration_tests_SOURCES) \
+	$(tree_sequences_tree_sequence_tests_SOURCES) \
 	$(unit_extensions_unit_tests_SOURCES) \
 	$(unit_fwdpp_unit_tests_SOURCES) \
 	$(unit_sugar_unit_tests_SOURCES)
 DIST_SOURCES =  \
 	$(am__integration_extensions_integration_tests_SOURCES_DIST) \
 	$(am__integration_sugar_integration_tests_SOURCES_DIST) \
+	$(am__tree_sequences_tree_sequence_tests_SOURCES_DIST) \
 	$(am__unit_extensions_unit_tests_SOURCES_DIST) \
 	$(am__unit_fwdpp_unit_tests_SOURCES_DIST) \
 	$(am__unit_sugar_unit_tests_SOURCES_DIST)
@@ -590,6 +600,7 @@ top_srcdir = @top_srcdir@
 #Integration test targets:
 @BUNIT_TEST_PRESENT_TRUE@integration_sugar_integration_tests_SOURCES = integration/sugar_integration_tests.cc integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc
 @BUNIT_TEST_PRESENT_TRUE@integration_extensions_integration_tests_SOURCES = integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc
+@BUNIT_TEST_PRESENT_TRUE@tree_sequences_tree_sequence_tests_SOURCES = tree_sequences/tree_sequence_tests.cc
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = -W -Wall
 all: all-am
 
@@ -659,6 +670,19 @@ integration/sugar_singlepopTest.$(OBJEXT):  \
 integration/sugar_integration_tests$(EXEEXT): $(integration_sugar_integration_tests_OBJECTS) $(integration_sugar_integration_tests_DEPENDENCIES) $(EXTRA_integration_sugar_integration_tests_DEPENDENCIES) integration/$(am__dirstamp)
 	@rm -f integration/sugar_integration_tests$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(integration_sugar_integration_tests_OBJECTS) $(integration_sugar_integration_tests_LDADD) $(LIBS)
+tree_sequences/$(am__dirstamp):
+	@$(MKDIR_P) tree_sequences
+	@: > tree_sequences/$(am__dirstamp)
+tree_sequences/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) tree_sequences/$(DEPDIR)
+	@: > tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/tree_sequence_tests.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+
+tree_sequences/tree_sequence_tests$(EXEEXT): $(tree_sequences_tree_sequence_tests_OBJECTS) $(tree_sequences_tree_sequence_tests_DEPENDENCIES) $(EXTRA_tree_sequences_tree_sequence_tests_DEPENDENCIES) tree_sequences/$(am__dirstamp)
+	@rm -f tree_sequences/tree_sequence_tests$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(tree_sequences_tree_sequence_tests_OBJECTS) $(tree_sequences_tree_sequence_tests_LDADD) $(LIBS)
 unit/$(am__dirstamp):
 	@$(MKDIR_P) unit
 	@: > unit/$(am__dirstamp)
@@ -727,6 +751,7 @@ unit/sugar_unit_tests$(EXEEXT): $(unit_sugar_unit_tests_OBJECTS) $(unit_sugar_un
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
 	-rm -f integration/*.$(OBJEXT)
+	-rm -f tree_sequences/*.$(OBJEXT)
 	-rm -f unit/*.$(OBJEXT)
 
 distclean-compile:
@@ -738,6 +763,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_multilocusTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepopTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/tree_sequence_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_callbacksTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_regionsTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_unit_test.Po@am__quote@ # am--include-marker
@@ -1012,6 +1038,13 @@ integration/extensions_integration_tests.log: integration/extensions_integration
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
+tree_sequences/tree_sequence_tests.log: tree_sequences/tree_sequence_tests$(EXEEXT)
+	@p='tree_sequences/tree_sequence_tests$(EXEEXT)'; \
+	b='tree_sequences/tree_sequence_tests'; \
+	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
+	--log-file $$b.log --trs-file $$b.trs \
+	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
+	"$$tst" $(AM_TESTS_FD_REDIRECT)
 .test.log:
 	@p='$<'; \
 	$(am__set_b); \
@@ -1096,6 +1129,8 @@ distclean-generic:
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
 	-rm -f integration/$(DEPDIR)/$(am__dirstamp)
 	-rm -f integration/$(am__dirstamp)
+	-rm -f tree_sequences/$(DEPDIR)/$(am__dirstamp)
+	-rm -f tree_sequences/$(am__dirstamp)
 	-rm -f unit/$(DEPDIR)/$(am__dirstamp)
 	-rm -f unit/$(am__dirstamp)
 
@@ -1113,6 +1148,7 @@ distclean: distclean-am
 	-rm -f integration/$(DEPDIR)/sugar_multilocusTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_unit_test.Po
@@ -1187,6 +1223,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f integration/$(DEPDIR)/sugar_multilocusTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_unit_test.Po
