--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -127,8 +127,10 @@ integration_sugar_integration_tests_OBJECTS =  \
 	$(am_integration_sugar_integration_tests_OBJECTS)
 integration_sugar_integration_tests_LDADD = $(LDADD)
 am__tree_sequences_tree_sequence_tests_SOURCES_DIST =  \
-	tree_sequences/tree_sequence_tests.cc
-@BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT)
+	tree_sequences/tree_sequence_tests.cc \
+	tree_sequences/test_generate_offspring.cc
+@BUNIT_TEST_PRESENT_TRUE@am_tree_sequences_tree_sequence_tests_OBJECTS = tree_sequences/tree_sequence_tests.$(OBJEXT) \
+@BUNIT_TEST_PRESENT_TRUE@	tree_sequences/test_generate_offspring.$(OBJEXT)
 tree_sequences_tree_sequence_tests_OBJECTS =  \
 	$(am_tree_sequences_tree_sequence_tests_OBJECTS)
 tree_sequences_tree_sequence_tests_LDADD = $(LDADD)
@@ -201,6 +203,7 @@ am__depfiles_remade =  \
 	integration/$(DEPDIR)/sugar_multilocusTest.Po \
 	integration/$(DEPDIR)/sugar_singlepopTest.Po \
 	integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po \
+	tree_sequences/$(DEPDIR)/test_generate_offspring.Po \
 	tree_sequences/$(DEPDIR)/tree_sequence_tests.Po \
 	unit/$(DEPDIR)/extensions_callbacksTest.Po \
 	unit/$(DEPDIR)/extensions_regionsTest.Po \
@@ -600,7 +603,7 @@ top_srcdir = @top_srcdir@
 #Integration test targets:
 @BUNIT_TEST_PRESENT_TRUE@integration_sugar_integration_tests_SOURCES = integration/sugar_integration_tests.cc integration/sugar_multilocusTest.cc  integration/sugar_singlepop_custom_diploidTest.cc  integration/sugar_singlepopTest.cc
 @BUNIT_TEST_PRESENT_TRUE@integration_extensions_integration_tests_SOURCES = integration/extensions_integration_tests.cc integration/extensions_regionsIntegrationTest.cc
-@BUNIT_TEST_PRESENT_TRUE@tree_sequences_tree_sequence_tests_SOURCES = tree_sequences/tree_sequence_tests.cc
+@BUNIT_TEST_PRESENT_TRUE@tree_sequences_tree_sequence_tests_SOURCES = tree_sequences/tree_sequence_tests.cc tree_sequences/test_generate_offspring.cc
 @BUNIT_TEST_PRESENT_TRUE@AM_CXXFLAGS = -W -Wall
 all: all-am
 
@@ -677,6 +680,9 @@ tree_sequences/$(DEPDIR)/$(am__dirstamp):
 	@$(MKDIR_P) tree_sequences/$(DEPDIR)
 	@: > tree_sequences/$(DEPDIR)/$(am__dirstamp)
 tree_sequences/tree_sequence_tests.$(OBJEXT):  \
+	tree_sequences/$(am__dirstamp) \
+	tree_sequences/$(DEPDIR)/$(am__dirstamp)
+tree_sequences/test_generate_offspring.$(OBJEXT):  \
 	tree_sequences/$(am__dirstamp) \
 	tree_sequences/$(DEPDIR)/$(am__dirstamp)
 
@@ -763,6 +769,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_multilocusTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepopTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/test_generate_offspring.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@tree_sequences/$(DEPDIR)/tree_sequence_tests.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_callbacksTest.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@unit/$(DEPDIR)/extensions_regionsTest.Po@am__quote@ # am--include-marker
@@ -1148,6 +1155,7 @@ distclean: distclean-am
 	-rm -f integration/$(DEPDIR)/sugar_multilocusTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
@@ -1223,6 +1231,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f integration/$(DEPDIR)/sugar_multilocusTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepopTest.Po
 	-rm -f integration/$(DEPDIR)/sugar_singlepop_custom_diploidTest.Po
+	-rm -f tree_sequences/$(DEPDIR)/test_generate_offspring.Po
 	-rm -f tree_sequences/$(DEPDIR)/tree_sequence_tests.Po
 	-rm -f unit/$(DEPDIR)/extensions_callbacksTest.Po
 	-rm -f unit/$(DEPDIR)/extensions_regionsTest.Po
